@@ -1,3 +1,15 @@
+2011-06-01  Jay Civelli  <jcivelli@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        Added a method to generate RFC 2822 compliant date strings.
+        https://bugs.webkit.org/show_bug.cgi?id=7169
+
+        * wtf/DateMath.cpp:
+        (WTF::twoDigitStringFromNumber):
+        (WTF::makeRFC2822DateString):
+        * wtf/DateMath.h:
+
 2011-05-31  Yong Li  <yoli@rim.com>
 
         Reviewed by Eric Seidel.
